--- a/index.html
+++ b/index.html
@@ -8,6 +8,64 @@
 
 </head>
 <body>
+<table>
+    <tr>
+        <th>1 row</th>
+        <th>2 row</th>
+        <th>3 row</th>
+        <th>4 row</th>
+        <th>5 row</th>
+    </tr>
+    <tr class="first">
+        <td>1 row</td>
+        <td>2 row</td>
+        <td>3 row</td>
+        <td>4 row</td>
+        <td>5 row</td>
+    </tr>
+    <tr class="second">
+        <td>1 row</td>
+        <td>2 row</td>
+        <td>3 row</td>
+        <td>4 row</td>
+        <td>5 row</td>
+    </tr>
+    <tr class="first">
+        <td>1 row</td>
+        <td>2 row</td>
+        <td>3 row</td>
+        <td>4 row</td>
+        <td>5 row</td>
+    </tr>
+    <tr class="second">
+        <td>1 row</td>
+        <td>2 row</td>
+        <td>3 row</td>
+        <td>4 row</td>
+        <td>5 row</td>
+    </tr>
+    <tr class="first">
+        <td>1 row</td>
+        <td>2 row</td>
+        <td>3 row</td>
+        <td>4 row</td>
+        <td>5 row</td>
+    </tr>
+    <tr class="second">
+        <td>1 row</td>
+        <td>2 row</td>
+        <td>3 row</td>
+        <td>4 row</td>
+        <td>5 row</td>
+    </tr>
+    <tr class="first">
+        <td>1 row</td>
+        <td>2 row</td>
+        <td>3 row</td>
+        <td>4 row</td>
+        <td>5 row</td>
+    </tr>
+</table>
 
 </body>
 </html>
